src/test/ui/loop-break-value-no-repeat.stderr
error[E0571]: `break` with value from a `for` loop
  --> $DIR/loop-break-value-no-repeat.rs:23:9
   |
23 |         break 22
   |         ^^^^^^^^ can only break with a value inside `loop`

error: aborting due to previous error(s)

